[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/InfoModal.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/close_icon_small.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.901961 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.313726 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="Animation" id=1]
resource_name = "ModalShow"
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -0.4, 0.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -0.1, 0.4 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.1 ]
}

[node name="Control" type="Control"]
anchor_left = 0.35
anchor_top = -0.4
anchor_right = 0.65
anchor_bottom = -0.1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.705882 )

[node name="InfoLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "This is some player feedback text!"
align = 1
valign = 1

[node name="CloseModal" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 8.0
margin_right = -9.0
margin_bottom = 23.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 2 )
clip_text = true

[node name="ModalAnimator" type="AnimationPlayer" parent="."]
anims/ModalShow = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ModalTimer" type="Timer" parent="."]

[connection signal="pressed" from="CloseModal" to="." method="closeButton_pressed"]
[connection signal="animation_finished" from="ModalAnimator" to="." method="modalAnimation_finished"]
[connection signal="timeout" from="ModalTimer" to="." method="modalTimer_finished"]
